Added David N's topic, MG's 2nd entry

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -50,39 +50,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person                      | Content                                              |
-| ---- | --------------------------- | ---------------------------------------------------- |
-| 1    | Matt Goldman                | Batmobile Telemetry with Maui.Graphics               |
-| 2    |                             |                                                      |
-| 3    |                             |                                                      |
-| 4    |                             |                                                      |
-| 5    |                             |                                                      |
-| 6    |                             |                                                      |
-| 7    | Ed Schimmel                 | TBC                                                  |
-| 8    |                             |                                                      |
-| 9    |                             |                                                      |
-| 10   | Almir Vuk                   | TBC                                                  |
-| 11   |                             |                                                      |
-| 12   |                             |                                                      |
-| 13   |                             |                                                      |
-| 14   | John Bijsterbosch           | TBC                                                  |
-| 15   |                             |                                                      |
-| 16   |                             |                                                      |
-| 17   |                             |                                                      |
-| 18   |                             |                                                      |
-| 19   |                             |                                                      |
-| 20   |                             |                                                      |
-| 21   | Shaun Lawrence              | TBC                                                  |
-| 22   | Héctor Uriel Pérez Rojas    | TBC                                                  |
-| 23   | David Nsai                  | TBC                                                  |
-| 24   | Luis Antonio Beltran Prieto | TBC                                                  |
-| 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI |
-| 26   |                             |                                                      |
-| 27   | Steven Thewissen            | TBC                                                  |
-| 28   | Gulam Ali H.                | TBC                                                  |
-| 29   | Ed Gomez                    | TBC                                                  |
-| 30   |                             |                                                      |
-| 31   |                             |                                                      |
+| Date | Person                      | Content                                                          |
+| ---- | --------------------------- | ---------------------------------------------------------------- |
+| 1    | Matt Goldman                | Batmobile Telemetry with Maui.Graphics                           |
+| 2    |                             |                                                                  |
+| 3    |                             |                                                                  |
+| 4    |                             |                                                                  |
+| 5    |                             |                                                                  |
+| 6    |                             |                                                                  |
+| 7    | Ed Schimmel                 | TBC                                                              |
+| 8    |                             |                                                                  |
+| 9    |                             |                                                                  |
+| 10   | Almir Vuk                   | TBC                                                              |
+| 11   |                             |                                                                  |
+| 12   |                             |                                                                  |
+| 13   |                             |                                                                  |
+| 14   | John Bijsterbosch           | TBC                                                              |
+| 15   |                             |                                                                  |
+| 16   |                             |                                                                  |
+| 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI |
+| 18   |                             |                                                                  |
+| 19   |                             |                                                                  |
+| 20   |                             |                                                                  |
+| 21   | Shaun Lawrence              | TBC                                                              |
+| 22   | Héctor Uriel Pérez Rojas    | TBC                                                              |
+| 23   | David Nsai                  | Building a pedometer fitness tracker                             |
+| 24   | Luis Antonio Beltran Prieto | TBC                                                              |
+| 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI             |
+| 26   |                             |                                                                  |
+| 27   | Steven Thewissen            | TBC                                                              |
+| 28   | Gulam Ali H.                | TBC                                                              |
+| 29   | Ed Gomez                    | TBC                                                              |
+| 30   |                             |                                                                  |
+| 31   |                             |                                                                  |
 
 {: .goldie-table }
 
