Added David O and Vlad

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -71,7 +71,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI |
 | 18   |                             |                                                                  |
 | 19   |                             |                                                                  |
-| 20   |                             |                                                                  |
+| 20   | Vladislav Antonyuk          | TBC                                                              |
 | 21   | Shaun Lawrence              | TBC                                                              |
 | 22   | Héctor Uriel Pérez Rojas    | TBC                                                              |
 | 23   | David Nsai                  | Building a pedometer fitness tracker                             |
@@ -81,7 +81,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 27   | Steven Thewissen            | TBC                                                              |
 | 28   | Gulam Ali H.                | TBC                                                              |
 | 29   | Ed Gomez                    | TBC                                                              |
-| 30   |                             |                                                                  |
+| 30   | David Ortinau               | TBC                                                              |
 | 31   |                             |                                                                  |
 
 {: .goldie-table }
