--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -62,7 +62,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 8    |                             |                                                                  |
 | 9    |                             |                                                                  |
 | 10   | Almir Vuk                   | TBC                                                              |
-| 11   |                             |                                                                  |
+| 11   | Ali Raza                    | TBC                                                              |
 | 12   |                             |                                                                  |
 | 13   |                             |                                                                  |
 | 14   | John Bijsterbosch           | TBC                                                              |
