--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -70,7 +70,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 16   |                             |                                                                  |
 | 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI |
 | 18   |                             |                                                                  |
-| 19   |                             |                                                                  |
+| 19   | Leomaris Reyes              | TBC                                                              |
 | 20   | Vladislav Antonyuk          | TBC                                                              |
 | 21   | Shaun Lawrence              | TBC                                                              |
 | 22   | Héctor Uriel Pérez Rojas    | TBC                                                              |
