Added Roman Jasek

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -82,7 +82,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 28   | Gulam Ali H.                | TBC                                                              |
 | 29   | Ed Gomez                    | TBC                                                              |
 | 30   | David Ortinau               | TBC                                                              |
-| 31   |                             |                                                                  |
+| 31   | Roman Jasek                 | TBC                                                              |
 
 {: .goldie-table }
 
