--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -77,7 +77,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 23   | David Nsai                  | Building a pedometer fitness tracker                             |
 | 24   | Luis Antonio Beltran Prieto | TBC                                                              |
 | 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI             |
-| 26   |                             |                                                                  |
+| 26   | Johan Smarius               | TBC                                                              |
 | 27   | Steven Thewissen            | TBC                                                              |
 | 28   | Gulam Ali H.                | TBC                                                              |
 | 29   | Ed Gomez                    | TBC                                                              |
