--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -64,12 +64,12 @@ These are just examples. If you think something is interesting, there's a good c
 | 10   | Almir Vuk                   | TBC                                                              |
 | 11   | Ali Raza                    | TBC                                                              |
 | 12   |                             |                                                                  |
-| 13   |                             |                                                                  |
+| 13   | Adolfo Marinucci            | TBC                                                              |
 | 14   | John Bijsterbosch           | TBC                                                              |
 | 15   |                             |                                                                  |
 | 16   |                             |                                                                  |
 | 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI |
-| 18   |                             |                                                                  |
+| 18   | Farshad Momtaz              | TBC                                                              |
 | 19   | Leomaris Reyes              | TBC                                                              |
 | 20   | Vladislav Antonyuk          | TBC                                                              |
 | 21   | Shaun Lawrence              | TBC                                                              |
