Added François Raminosona 2025

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -59,7 +59,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 5    |                             |                                                                  |
 | 6    |                             |                                                                  |
 | 7    | Ed Schimmel                 | TBC                                                              |
-| 8    |                             |                                                                  |
+| 8    | François Raminosona         | TBC                                                              |
 | 9    |                             |                                                                  |
 | 10   | Almir Vuk                   | TBC                                                              |
 | 11   | Ali Raza                    | TBC                                                              |
