--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -66,7 +66,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 12   |                             |                                                                  |
 | 13   | Adolfo Marinucci            | TBC                                                              |
 | 14   | John Bijsterbosch           | TBC                                                              |
-| 15   |                             |                                                                  |
+| 15   | Nick Alonge                 | Introduction to Reusable Views and Controls                      |
 | 16   | Sebastian Jensen            | TBC                                                              |
 | 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI |
 | 18   | Farshad Momtaz              | TBC                                                              |
