2025 - added Ed to 5th and 6th

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -56,8 +56,8 @@ These are just examples. If you think something is interesting, there's a good c
 | 2    | Matt Goldman                | Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge              |
 | 3    | Matt Goldman                | Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry    |
 | 4    |                             |                                                                  |
-| 5    |                             |                                                                  |
-| 6    |                             |                                                                  |
+| 5    | Ed Schimmel                 | TBC                                                              |
+| 6    | Ed Schimmel                 | TBC                                                              |
 | 7    | Ed Schimmel                 | TBC                                                              |
 | 8    | François Raminosona         | TBC                                                              |
 | 9    |                             |                                                                  |
