--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -50,39 +50,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person                      | Content                                                          |
-| ---- | --------------------------- | ---------------------------------------------------------------- |
-| 1    | Matt Goldman                | Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control     |
-| 2    | Matt Goldman                | Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge              |
-| 3    | Matt Goldman                | Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry    |
-| 4    |                             |                                                                  |
-| 5    | Ed Schimmel                 | TBC                                                              |
-| 6    | Ed Schimmel                 | TBC                                                              |
-| 7    | Ed Schimmel                 | TBC                                                              |
-| 8    | François Raminosona         | TBC                                                              |
-| 9    |                             |                                                                  |
-| 10   | Almir Vuk                   | TBC                                                              |
-| 11   | Ali Raza                    | TBC                                                              |
-| 12   |                             |                                                                  |
-| 13   | Adolfo Marinucci            | TBC                                                              |
-| 14   | John Bijsterbosch           | TBC                                                              |
-| 15   | Nick Alonge                 | Introduction to Reusable Views and Controls                      |
-| 16   | Sebastian Jensen            | TBC                                                              |
-| 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI |
-| 18   | Farshad Momtaz              | TBC                                                              |
-| 19   | Leomaris Reyes              | TBC                                                              |
-| 20   | Vladislav Antonyuk          | TBC                                                              |
-| 21   | Shaun Lawrence              | TBC                                                              |
-| 22   | Héctor Uriel Pérez Rojas    | TBC                                                              |
-| 23   | David Nsai                  | Building a pedometer fitness tracker                             |
-| 24   | Luis Antonio Beltran Prieto | TBC                                                              |
-| 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI             |
-| 26   | Johan Smarius               | TBC                                                              |
-| 27   | Steven Thewissen            | TBC                                                              |
-| 28   | Gulam Ali H.                | TBC                                                              |
-| 29   | Ed Gomez                    | TBC                                                              |
-| 30   | David Ortinau               | TBC                                                              |
-| 31   | Roman Jasek                 | TBC                                                              |
+| Date | Person                      | Content                                                                                 |
+| ---- | --------------------------- | --------------------------------------------------------------------------------------- |
+| 1    | Matt Goldman                | [Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control](posts/batmobile-part-1/) |
+| 2    | Matt Goldman                | Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge                                     |
+| 3    | Matt Goldman                | Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry                           |
+| 4    |                             |                                                                                         |
+| 5    | Ed Schimmel                 | TBC                                                                                     |
+| 6    | Ed Schimmel                 | TBC                                                                                     |
+| 7    | Ed Schimmel                 | TBC                                                                                     |
+| 8    | François Raminosona         | TBC                                                                                     |
+| 9    |                             |                                                                                         |
+| 10   | Almir Vuk                   | TBC                                                                                     |
+| 11   | Ali Raza                    | TBC                                                                                     |
+| 12   |                             |                                                                                         |
+| 13   | Adolfo Marinucci            | TBC                                                                                     |
+| 14   | John Bijsterbosch           | TBC                                                                                     |
+| 15   | Nick Alonge                 | Introduction to Reusable Views and Controls                                             |
+| 16   | Sebastian Jensen            | TBC                                                                                     |
+| 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI                        |
+| 18   | Farshad Momtaz              | TBC                                                                                     |
+| 19   | Leomaris Reyes              | TBC                                                                                     |
+| 20   | Vladislav Antonyuk          | TBC                                                                                     |
+| 21   | Shaun Lawrence              | TBC                                                                                     |
+| 22   | Héctor Uriel Pérez Rojas    | TBC                                                                                     |
+| 23   | David Nsai                  | Building a pedometer fitness tracker                                                    |
+| 24   | Luis Antonio Beltran Prieto | TBC                                                                                     |
+| 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI                                    |
+| 26   | Johan Smarius               | TBC                                                                                     |
+| 27   | Steven Thewissen            | TBC                                                                                     |
+| 28   | Gulam Ali H.                | TBC                                                                                     |
+| 29   | Ed Gomez                    | TBC                                                                                     |
+| 30   | David Ortinau               | TBC                                                                                     |
+| 31   | Roman Jasek                 | TBC                                                                                     |
 
 {: .goldie-table }
 
