fixed a couple of links

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -52,7 +52,7 @@ These are just examples. If you think something is interesting, there's a good c
 
 | Date | Person                      | Content                                                                                 |
 | ---- | --------------------------- | --------------------------------------------------------------------------------------- |
-| 1    | Matt Goldman                | [Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control](posts/batmobile-part-1/) |
+| 1    | Matt Goldman                | [Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control](/posts/batmobile-part-1/) |
 | 2    | Matt Goldman                | Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge                                     |
 | 3    | Matt Goldman                | Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry                           |
 | 4    |                             |                                                                                         |
