Added Francois 2025 part 2

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -60,7 +60,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 6    | Ed Schimmel                 | TBC                                                                                      |
 | 7    | Ed Schimmel                 | TBC                                                                                      |
 | 8    | François Raminosona         | TBC                                                                                      |
-| 9    |                             |                                                                                          |
+| 9    | François Raminosona         | TBC                                                                                      |
 | 10   | Almir Vuk                   | TBC                                                                                      |
 | 11   | Ali Raza                    | TBC                                                                                      |
 | 12   |                             |                                                                                          |
