--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -55,7 +55,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 1    | Matt Goldman                | [Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control](/posts/batmobile-part-1/) |
 | 2    | Matt Goldman                | [Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge](/posts/batmobile-part-2)           |
 | 3    | Matt Goldman                | [Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry](/posts/batmobile-part-3) |
-| 4    |                             |                                                                                          |
+| 4    | Matt Goldman                | [Replicating Outlook's 'Focused/Other' toggle in .NET MAUI](/posts/outlook-toggle)       |
 | 5    | Ed Schimmel                 | TBC                                                                                      |
 | 6    | Ed Schimmel                 | TBC                                                                                      |
 | 7    | Ed Schimmel                 | TBC                                                                                      |
