--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -56,7 +56,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 2    | Matt Goldman                | [Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge](/posts/batmobile-part-2)           |
 | 3    | Matt Goldman                | [Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry](/posts/batmobile-part-3) |
 | 4    | Matt Goldman                | [Replicating Outlook's 'Focused/Other' toggle in .NET MAUI](/posts/outlook-toggle)       |
-| 5    | Ed Schimmel                 | TBC                                                                                      |
+| 5    | Ed Schimmel                 | [Managing Screen Sizes](https://byte217.com/net-maui-managing-screen-sizes/)             |
 | 6    | Ed Schimmel                 | TBC                                                                                      |
 | 7    | Ed Schimmel                 | TBC                                                                                      |
 | 8    | François Raminosona         | TBC                                                                                      |
