Added Ed day 2 20205

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -57,7 +57,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 3    | Matt Goldman                | [Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry](/posts/batmobile-part-3) |
 | 4    | Matt Goldman                | [Replicating Outlook's 'Focused/Other' toggle in .NET MAUI](/posts/outlook-toggle)       |
 | 5    | Ed Schimmel                 | [Managing Screen Sizes](https://byte217.com/net-maui-managing-screen-sizes/)             |
-| 6    | Ed Schimmel                 | TBC                                                                                      |
+| 6    | Ed Schimmel                 | [Scrolling Text Display](https://byte217.com/net-maui-scrolling-text-display/)           |
 | 7    | Ed Schimmel                 | TBC                                                                                      |
 | 8    | François Raminosona         | TBC                                                                                      |
 | 9    | François Raminosona         | TBC                                                                                      |
