Add pin attribute and update contribution list for MAUI UI July 2025

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -5,6 +5,7 @@ date:   2025-05-01 00:00:01 +1000
 image:  /images/maui-ui-july-bg.png
 tags:   mobile maui ui
 categories: [.NET, Mobile]
+pin: true
 ---
 
 It's time for #MAUIUIJuly again!
@@ -58,7 +59,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 4    | Matt Goldman                | [Replicating Outlook's 'Focused/Other' toggle in .NET MAUI](/posts/outlook-toggle)       |
 | 5    | Ed Schimmel                 | [Managing Screen Sizes](https://byte217.com/net-maui-managing-screen-sizes/)             |
 | 6    | Ed Schimmel                 | [Scrolling Text Display](https://byte217.com/net-maui-scrolling-text-display/)           |
-| 7    | Ed Schimmel                 | TBC                                                                                      |
+| 7    | Ed Schimmel                 | [Custom Tab Control](https://byte217.com/net-maui-tab-control-with-underlinement/)       |
 | 8    | François Raminosona         | TBC                                                                                      |
 | 9    | François Raminosona         | TBC                                                                                      |
 | 10   | Almir Vuk                   | TBC                                                                                      |
