--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -64,7 +64,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 9    | François Raminosona         | [Gyroscope Parallax](https://blog.francois.raminosona.com/sensor-based-parallax-in-net-maui-using-the-gyroscope-mauiuijuly/) |
 | 10   | Almir Vuk                   | TBC                                                                                                                          |
 | 11   | Ali Raza                    | TBC                                                                                                                          |
-| 12   | Matt Goldman                | [Download Progress Microinteractions in .NET MAUI](/posts/bdd-app-downloads)                                                 |
+| 12   | Matt Goldman                | [Beer-Driven Downloads & Microinteractions in .NET MAUI](/posts/bdd-app-downloads)                                           |
 | 13   | Adolfo Marinucci            | TBC                                                                                                                          |
 | 14   | John Bijsterbosch           | TBC                                                                                                                          |
 | 15   | Nick Alonge                 | Introduction to Reusable Views and Controls                                                                                  |
