--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -51,39 +51,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person                      | Content                                                                                                                      |
-| ---- | --------------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
-| 1    | Matt Goldman                | [Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control](/posts/batmobile-part-1/)                                     |
-| 2    | Matt Goldman                | [Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge](/posts/batmobile-part-2)                                               |
-| 3    | Matt Goldman                | [Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry](/posts/batmobile-part-3)                                     |
-| 4    | Matt Goldman                | [Replicating Outlook's 'Focused/Other' toggle in .NET MAUI](/posts/outlook-toggle)                                           |
-| 5    | Ed Schimmel                 | [Managing Screen Sizes](https://byte217.com/net-maui-managing-screen-sizes/)                                                 |
-| 6    | Ed Schimmel                 | [Scrolling Text Display](https://byte217.com/net-maui-scrolling-text-display/)                                               |
-| 7    | Ed Schimmel                 | [Custom Tab Control](https://byte217.com/net-maui-tab-control-with-underlinement/)                                           |
-| 8    | François Raminosona         | [Sensors in .NET MAUI](https://blog.francois.raminosona.com/sensors-in-net-maui-mauiuijuly/)                                 |
-| 9    | François Raminosona         | [Gyroscope Parallax](https://blog.francois.raminosona.com/sensor-based-parallax-in-net-maui-using-the-gyroscope-mauiuijuly/) |
-| 10   | Almir Vuk                   | TBC                                                                                                                          |
-| 11   | Ali Raza                    | TBC                                                                                                                          |
-| 12   | Matt Goldman                | [Beer-Driven Downloads & Microinteractions in .NET MAUI](/posts/bdd-app-downloads)                                           |
-| 13   | Adolfo Marinucci            | TBC                                                                                                                          |
-| 14   | John Bijsterbosch           | TBC                                                                                                                          |
-| 15   | Nick Alonge                 | Introduction to Reusable Views and Controls                                                                                  |
-| 16   | Sebastian Jensen            | TBC                                                                                                                          |
-| 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI                                                             |
-| 18   | Farshad Momtaz              | TBC                                                                                                                          |
-| 19   | Leomaris Reyes              | TBC                                                                                                                          |
-| 20   | Vladislav Antonyuk          | TBC                                                                                                                          |
-| 21   | Shaun Lawrence              | TBC                                                                                                                          |
-| 22   | Héctor Uriel Pérez Rojas    | TBC                                                                                                                          |
-| 23   | David Nsai                  | Building a pedometer fitness tracker                                                                                         |
-| 24   | Luis Antonio Beltran Prieto | TBC                                                                                                                          |
-| 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI                                                                         |
-| 26   | Johan Smarius               | TBC                                                                                                                          |
-| 27   | Steven Thewissen            | TBC                                                                                                                          |
-| 28   | Gulam Ali H.                | TBC                                                                                                                          |
-| 29   | Ed Gomez                    | TBC                                                                                                                          |
-| 30   | David Ortinau               | TBC                                                                                                                          |
-| 31   | Roman Jasek                 | TBC                                                                                                                          |
+| Date | Person                      | Content                                                                                                                                             |
+| ---- | --------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1    | Matt Goldman                | [Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control](/posts/batmobile-part-1/)                                                            |
+| 2    | Matt Goldman                | [Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge](/posts/batmobile-part-2)                                                                      |
+| 3    | Matt Goldman                | [Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry](/posts/batmobile-part-3)                                                            |
+| 4    | Matt Goldman                | [Replicating Outlook's 'Focused/Other' toggle in .NET MAUI](/posts/outlook-toggle)                                                                  |
+| 5    | Ed Schimmel                 | [Managing Screen Sizes](https://byte217.com/net-maui-managing-screen-sizes/)                                                                        |
+| 6    | Ed Schimmel                 | [Scrolling Text Display](https://byte217.com/net-maui-scrolling-text-display/)                                                                      |
+| 7    | Ed Schimmel                 | [Custom Tab Control](https://byte217.com/net-maui-tab-control-with-underlinement/)                                                                  |
+| 8    | François Raminosona         | [Sensors in .NET MAUI](https://blog.francois.raminosona.com/sensors-in-net-maui-mauiuijuly/)                                                        |
+| 9    | François Raminosona         | [Gyroscope Parallax](https://blog.francois.raminosona.com/sensor-based-parallax-in-net-maui-using-the-gyroscope-mauiuijuly/)                        |
+| 10   | Almir Vuk                   | TBC                                                                                                                                                 |
+| 11   | Ali Raza                    | TBC                                                                                                                                                 |
+| 12   | Matt Goldman                | [Beer-Driven Downloads & Microinteractions in .NET MAUI](/posts/bdd-app-downloads)                                                                  |
+| 13   | Adolfo Marinucci            | TBC                                                                                                                                                 |
+| 14   | John Bijsterbosch           | [Creating your first .NET MAUI SkiaSharp Component](https://blog.johndotnet.nl/creating-your-very-first-net-maui-skiasharp-component-step-by-step/) |
+| 15   | Nick Alonge                 | Introduction to Reusable Views and Controls                                                                                                         |
+| 16   | Sebastian Jensen            | TBC                                                                                                                                                 |
+| 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI                                                                                    |
+| 18   | Farshad Momtaz              | TBC                                                                                                                                                 |
+| 19   | Leomaris Reyes              | TBC                                                                                                                                                 |
+| 20   | Vladislav Antonyuk          | TBC                                                                                                                                                 |
+| 21   | Shaun Lawrence              | TBC                                                                                                                                                 |
+| 22   | Héctor Uriel Pérez Rojas    | TBC                                                                                                                                                 |
+| 23   | David Nsai                  | Building a pedometer fitness tracker                                                                                                                |
+| 24   | Luis Antonio Beltran Prieto | TBC                                                                                                                                                 |
+| 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI                                                                                                |
+| 26   | Johan Smarius               | TBC                                                                                                                                                 |
+| 27   | Steven Thewissen            | TBC                                                                                                                                                 |
+| 28   | Gulam Ali H.                | TBC                                                                                                                                                 |
+| 29   | Ed Gomez                    | TBC                                                                                                                                                 |
+| 30   | David Ortinau               | TBC                                                                                                                                                 |
+| 31   | Roman Jasek                 | TBC                                                                                                                                                 |
 
 {: .goldie-table }
 
