--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -69,7 +69,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 14   | John Bijsterbosch           | [Creating your first .NET MAUI SkiaSharp Component](https://blog.johndotnet.nl/creating-your-very-first-net-maui-skiasharp-component-step-by-step/) |
 | 15   | Nick Alonge                 | Introduction to Reusable Views and Controls                                                                                                         |
 | 16   | Sebastian Jensen            | TBC                                                                                                                                                 |
-| 17   | Matt Goldman                | Feeling the vibes: Designing and building .NET MAUI apps with AI                                                                                    |
+| 17   | Calin Ciurariu              | Feeling the vibes: Designing and building .NET MAUI apps with AI                                                                                    |
 | 18   | Farshad Momtaz              | TBC                                                                                                                                                 |
 | 19   | Leomaris Reyes              | TBC                                                                                                                                                 |
 | 20   | Vladislav Antonyuk          | TBC                                                                                                                                                 |
