--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -67,7 +67,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 12   | Matt Goldman                | [Beer-Driven Downloads & Microinteractions in .NET MAUI](/posts/bdd-app-downloads)                                                                  |
 | 13   | Adolfo Marinucci            | TBC                                                                                                                                                 |
 | 14   | John Bijsterbosch           | [Creating your first .NET MAUI SkiaSharp Component](https://blog.johndotnet.nl/creating-your-very-first-net-maui-skiasharp-component-step-by-step/) |
-| 15   | Nick Alonge                 | Introduction to Reusable Views and Controls                                                                                                         |
+| 15   | Nick Alonge                 | [Introduction to Reusable Views and Controls ](https://dev.to/nick_alonge/reusable-views-in-net-maui-4n3c)                                          |
 | 16   | Sebastian Jensen            | TBC                                                                                                                                                 |
 | 17   | Calin Ciurariu              | Feeling the vibes: Designing and building .NET MAUI apps with AI                                                                                    |
 | 18   | Farshad Momtaz              | TBC                                                                                                                                                 |
