Added 3 more days to 2025

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -63,13 +63,13 @@ These are just examples. If you think something is interesting, there's a good c
 | 8    | François Raminosona         | [Sensors in .NET MAUI](https://blog.francois.raminosona.com/sensors-in-net-maui-mauiuijuly/)                                                          |
 | 9    | François Raminosona         | [Gyroscope Parallax](https://blog.francois.raminosona.com/sensor-based-parallax-in-net-maui-using-the-gyroscope-mauiuijuly/)                          |
 | 10   | Almir Vuk                   | TBC                                                                                                                                                   |
-| 11   | Ali Raza                    | TBC                                                                                                                                                   |
+| 11   | Ali Raza                    | [Milestone Journey Tracker](https://mauiwithali.hashnode.dev/building-a-dynamic-milestone-journey-tracker-with-skiasharp-in-net-maui)                 |
 | 12   | Matt Goldman                | [Beer-Driven Downloads & Microinteractions in .NET MAUI](/posts/bdd-app-downloads)                                                                    |
-| 13   | Adolfo Marinucci            | TBC                                                                                                                                                   |
+| 13   | Adolfo Marinucci            | [Introduction to Reactor Theme](https://github.com/adospace/reactor-theme/blob/main/net_maui_july2025_article.md)                                     |
 | 14   | John Bijsterbosch           | [Creating your first .NET MAUI SkiaSharp Component](https://blog.johndotnet.nl/creating-your-very-first-net-maui-skiasharp-component-step-by-step/)   |
 | 15   | Nick Alonge                 | [Introduction to Reusable Views and Controls ](https://dev.to/nick_alonge/reusable-views-in-net-maui-4n3c)                                            |
 | 16   | Sebastian Jensen            | [Building an Animated Countdown Control in .NET MAUI](https://medium.com/@tsjdevapps/building-an-animated-countdown-control-in-net-maui-0b1faff7ed76) |
-| 17   | Calin Ciurariu              | Feeling the vibes: Designing and building .NET MAUI apps with AI                                                                                      |
+| 17   | Calin Ciurariu              | [Scrolling Label](https://medium.com/@clinciurariu/calin-ciurariu-c153c8ceb9dd)                                                                       |
 | 18   | Farshad Momtaz              | TBC                                                                                                                                                   |
 | 19   | Leomaris Reyes              | TBC                                                                                                                                                   |
 | 20   | Vladislav Antonyuk          | TBC                                                                                                                                                   |
