--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -77,8 +77,8 @@ These are just examples. If you think something is interesting, there's a good c
 | 22   | Héctor Uriel Pérez Rojas    | [Create Viral Videos with SORA in .NET MAUI](https://devs.school/create-viral-videos-with-sora-in-net-maui/)                                                                   |
 | 23   | David Nsai                  | [Building a pedometer fitness tracker](https://medium.com/@nsaidave/building-a-pedometer-fitness-tracker-using-net-maui-8723ad041c1d)                                          |
 | 24   | Luis Antonio Beltran Prieto | [Joystick Navigation in .NET MAUI](https://dev.to/icebeam7/joystick-navigation-ui-in-net-maui-5974)                                                                            |
-| 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI                                                                                                                           |
-| 26   | Johan Smarius               | TBC                                                                                                                                                                            |
+| 25   | Nick Kovalsky               | [Build Cross-Platform Games in .NET MAUI with DrawnUI](https://taublast.github.io/posts/Breakout/)                                                                             |
+| 26   | Johan Smarius               | [Exploring the Syncfusion .NET MAUI Toolkit](https://www.youtube.com/watch?v=T69XFmhjdzQ)                                                                                      |
 | 27   | Steven Thewissen            | TBC                                                                                                                                                                            |
 | 28   | Gulam Ali H.                | TBC                                                                                                                                                                            |
 | 29   | Ed Gomez                    | TBC                                                                                                                                                                            |
