--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -79,7 +79,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 24   | Luis Antonio Beltran Prieto | [Joystick Navigation in .NET MAUI](https://dev.to/icebeam7/joystick-navigation-ui-in-net-maui-5974)                                                                            |
 | 25   | Nick Kovalsky               | [Build Cross-Platform Games in .NET MAUI with DrawnUI](https://taublast.github.io/posts/Breakout/)                                                                             |
 | 26   | Johan Smarius               | [Exploring the Syncfusion .NET MAUI Toolkit](https://www.youtube.com/watch?v=T69XFmhjdzQ)                                                                                      |
-| 27   | Steven Thewissen            | TBC                                                                                                                                                                            |
+| 27   | Steven Thewissen            | [The Crosswind Experiment](https://thewissen.io/maui-ui-july-crosswind-experiment/)                                                                                            |
 | 28   | Gulam Ali H.                | [Coach Marks, but Beautiful in .NET MAUI](https://medium.com/@freakyali/coach-marks-but-beautiful-in-net-maui-7cd861dc1058)                                                    |
 | 29   | Ed Gomez                    | TBC                                                                                                                                                                            |
 | 30   | David Ortinau               | TBC                                                                                                                                                                            |
